--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,13 @@
 // Colors
+$dark-grey: #333333;
+$grey: #666;
+$blue: #007CC0;
+$dark-blue: #364051;
+$off-white: #f7f7f7;
 
+//Font Size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 //Spacing
 $s-size: 1.2rem;
